pots pots landing was implemented

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,26 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "reset.scss";
+@import "universal";
+@import "header";
+@import "for-whom";
+@import "page";
+@import "menu";
+@import "features";
+@import "meet-us";
+@import "materials";
+@import "swiper";
+@import "pop-up";
+@import "pot-size";
+@import "checkout";
+@import "form";
+@import "footer";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
-  background: $c-gray;
+  background: #fff;
 }
