--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$torquoise: #03839e;
+$yellow: #ffe339;
+$yellow-light: #ffec7a;
+$grey: #b3b3b3;
+$grey-light: #f8f8f8;
+$red-medium: #eb5757;
+$padding-content-mobile: 30px;
+$padding-content-tablet: 34px;
+$padding-content-laptop: 135px;
+$gap-laptop: 30px;
+$margin-section-mobile: 110px;
